# tti-human-eval

./: README.md  bibtex.txt  index.html  pyproject.toml
mturk/configs/: hit_cfg.yaml
mturk/configs/custom_qual/: live-qualification_test.yaml  test_cfg.yaml
mturk/configs/sys_qual/: adult_content.yaml  approval_rate.yaml  locale.yaml  master_worker.yaml  num_hits.yaml
mturk/layouts/: HIT_layout.html  qualification_answers.xml  qualification_question.xml
mturk/tools/: hit_manager.py  reporter.py
